# mcp-surveys

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml  publish-cli.yml  publish-npm.yml  release.yml
deploy/: Caddyfile.mcp-subdomain
docs/mockups/: binary_tradeoff.html
docs/superpowers/specs/: 2026-07-13-clickable-links-design.md
skills/mcp-surveys/: SKILL.md
skills/mcp-surveys-cli/: SKILL.md
src/mcp_surveys/: __init__.py  api.py  app.py  config.py  errors.py  http.py  limits.py  mcp_server.py  models.py  rate_limit.py  schema.py  service.py  storage.py
src/mcp_surveys/web/: index.html
src/mcp_surveys/web/assets/: agent.mjs  app.js  styles.css  text.mjs
src/mcp_surveys/web/test/: text.test.mjs
tests/: test_agent_api.py  test_cli.py  test_service.py
