[project]
name = "mcp-surveys"
version = "0.1.0"
description = "Ephemeral Redis-backed surveys for agents, exposed over FastMCP and FastAPI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "mcp-surveys contributors" }]
dependencies = [
    "fastapi[standard]>=0.115",
    "fastmcp>=2.0",
    "pydantic>=2.7",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mcp-surveys = "mcp_surveys.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_surveys"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
